--- a/views/listings/allListings.ejs
+++ b/views/listings/allListings.ejs
@@ -71,15 +71,14 @@
   </div>
 </div>
 
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
-
+<div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 mt-3">
 <%for(let listing of listings){%>
   <a href="/listings/<%=listing._id%>" class="listing-link">
 <div class="card col listing-card" >
   <!-- <img src="<%=listing.img%>" class="card-img-top" alt="listing_img" style="height: 20rem;"> -->
-  <img src="<%= listing.img ? listing.img.url : '/images/placeholder.png' %>"   class="card-img-top" alt="listing_img" style="height: 20rem;">
+  <img src="<%= listing.img ? listing.img.url : '/images/placeholder.png' %>"   class="card-img-top" alt="listing_img" >
 
-  <div class="card-img-overlay">abcd</div>
+  <div class="card-img-overlay"></div>
   <div class="card-body">
     <p class="card-text"><b><%=listing.title%> </b><br> <br>
    <% if (listing.price) { %>
@@ -89,52 +88,11 @@
     <span class="text-muted">Price not available</span>
   <% } %>
     </p> 
-  
   </div>
 </div>
-
-  </a>
-
+ </a>
 <%}%>
-
 </div>
-
-<style>
-#filters{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-.filter{
-  text-align: center;
-  margin-right: 2rem;
-  margin-top: 2rem;
-  opacity: 0.7;
-}
-.filter:hover{
-  opacity: 1;
-  cursor: pointer;
-}
-.filter p{
-  font-size: 0.8rem;
-}
-.tax-info{
-  display: none;
-}
-.tax-toggle{
-  border: 1px solid black;
-  border-radius: 1rem;
-  height: 3.5rem;
-  padding: 1rem;
-  margin-left:3rem;
-  display: flex;
-  align-items: center;
-}
-
-
-
-</style>
-
 <script>
   let taxSwitch = document.getElementById("switchCheckDefault");
 
@@ -148,19 +106,7 @@ taxSwitch.addEventListener("click", () => {
     }
   }
 });
-
 </script>
 
-
-
-
-
-
-
-<!-- form for new route -->
-
-<!-- <form action="/listings/new" method="get">
-    <button>Create New listing</button>
-</form> -->
 
    
